Make java8 compatible